# easy-player

./: CMakeLists.txt  Player.cpp  Player.h  Player.ui  README.md  Res.qrc  main.cpp
Res/: style.qss
